from _travel import Travel, TravelGroup
# import _travel


class User():
    def __init__(self):
        pass


class UserInfoBase():
    def __init__(self):
        pass


class UserInfo(UserInfoBase):
    def __init__(self):
        super()


class FriendInfo(UserInfoBase):
    def __init__(self):
        super()
