@startuml PackageDiagram.backend

skinparam Dpi 200
skinparam DefaultFont {
    Name Menlo
    Size 13
    Style bold
}

namespace Backend {
    package _utilities {
        'method gps_to_location()
        class City
        class Time
        class Utilities
        enum Gender
        enum Visibility
    }

    package _interface {
        interface Interface
    }

    package _travel {
        class Travel
        class TravelGroup
        class TravelInfo
    }

    package _user {
        class User
        class UserInfoBase
        class UserInfo
        class FriendInfo
    }
}

package django {
}

User        *--  UserInfo
User        *--  FriendInfo
User        *--  TravelGroup
UserInfo    --|> UserInfoBase
FriendInfo  --|> UserInfoBase
TravelGroup o--  Travel
Travel      *--  TravelInfo
Travel      <..  User
Travel      <..  FriendInfo
TravelInfo  o--  City
TravelInfo  *--  Time

django     ..> Backend:    <<import>>
_travel    ..> _utilities: <<access>>
_user      ..> _utilities: <<access>>
_interface ..> _travel:    <<import>>
_interface ..> _user:      <<import>>

@enduml
